Bug 237255 - Message list settings (theme, aggregation) not saved properly
Summary: Message list settings (theme, aggregation) not saved properly
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-05-11 16:45 UTC by Thomas McGuire
Modified: 2010-05-13 23:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-05-11 16:45:31 UTC
In the folder properties dialog, you can set a folder-specific theme and aggregation.

However, that setting is not applied on the correct folder.
I have change the folder settings of folder A, the theme/aggregation is changed on some other random folder B.
Comment 1 Thomas McGuire 2010-05-11 16:46:43 UTC
Btw, the folder properties dialog properly remembers the setting, it is just not reflected on the message list when actually selecting the folder.
Comment 2 Leo Franchi 2010-05-13 23:53:13 UTC
SVN commit 1126407 by lfranchi:

Update the message pane to the selected folder on return to the event loop---the messagelist shares the same selectionmodel internally, and at the point it was called the selectionmodel still had the old selection.

BUG: 237255


 M  +23 -21    kmmainwidget.cpp  
 M  +4 -1      kmmainwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1126407