Update the message pane to the selected folder on return to the event loop---the messagelist shares the same selectionmodel internally, and at the point it was called the selectionmodel still had the old selection.

BUG: 237255

svn path=/trunk/KDE/kdepim/kmail/; revision=1126407